begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with this  * work for additional information regarding copyright ownership.  The ASF  * licenses this file to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,WITHOUT  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the  * License for the specific language governing permissions and limitations under  * the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.ksm
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdfs
operator|.
name|DFSUtil
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ksm
operator|.
name|helpers
operator|.
name|KsmVolumeArgs
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConfiguration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
operator|.
name|exceptions
operator|.
name|KSMException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|KeySpaceManagerProtocolProtos
operator|.
name|VolumeList
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|KeySpaceManagerProtocolProtos
operator|.
name|VolumeInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|web
operator|.
name|utils
operator|.
name|OzoneUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|utils
operator|.
name|LevelDBStore
import|;
end_import

begin_import
import|import
name|org
operator|.
name|iq80
operator|.
name|leveldb
operator|.
name|DBException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|iq80
operator|.
name|leveldb
operator|.
name|Options
import|;
end_import

begin_import
import|import
name|org
operator|.
name|iq80
operator|.
name|leveldb
operator|.
name|WriteBatch
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|File
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|LinkedList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|locks
operator|.
name|ReadWriteLock
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|locks
operator|.
name|ReentrantReadWriteLock
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConsts
operator|.
name|KSM_DB_NAME
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
operator|.
name|KSMConfigKeys
operator|.
name|OZONE_KSM_DB_CACHE_SIZE_DEFAULT
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
operator|.
name|KSMConfigKeys
operator|.
name|OZONE_KSM_DB_CACHE_SIZE_MB
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
operator|.
name|KSMConfigKeys
operator|.
name|OZONE_KSM_USER_MAX_VOLUME_DEFAULT
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
operator|.
name|KSMConfigKeys
operator|.
name|OZONE_KSM_USER_MAX_VOLUME
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|ksm
operator|.
name|exceptions
operator|.
name|KSMException
operator|.
name|ResultCodes
import|;
end_import

begin_comment
comment|/**  * KSM volume management code.  */
end_comment

begin_class
DECL|class|VolumeManagerImpl
specifier|public
class|class
name|VolumeManagerImpl
implements|implements
name|VolumeManager
block|{
DECL|field|LOG
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|VolumeManagerImpl
operator|.
name|class
argument_list|)
decl_stmt|;
DECL|field|ksm
specifier|private
specifier|final
name|KeySpaceManager
name|ksm
decl_stmt|;
DECL|field|store
specifier|private
specifier|final
name|LevelDBStore
name|store
decl_stmt|;
DECL|field|lock
specifier|private
specifier|final
name|ReadWriteLock
name|lock
decl_stmt|;
DECL|field|maxUserVolumeCount
specifier|private
specifier|final
name|int
name|maxUserVolumeCount
decl_stmt|;
comment|/**    * Constructor.    * @param conf - Ozone configuration.    * @throws IOException    */
DECL|method|VolumeManagerImpl (KeySpaceManager ksm, OzoneConfiguration conf)
specifier|public
name|VolumeManagerImpl
parameter_list|(
name|KeySpaceManager
name|ksm
parameter_list|,
name|OzoneConfiguration
name|conf
parameter_list|)
throws|throws
name|IOException
block|{
name|File
name|metaDir
init|=
name|OzoneUtils
operator|.
name|getScmMetadirPath
argument_list|(
name|conf
argument_list|)
decl_stmt|;
specifier|final
name|int
name|cacheSize
init|=
name|conf
operator|.
name|getInt
argument_list|(
name|OZONE_KSM_DB_CACHE_SIZE_MB
argument_list|,
name|OZONE_KSM_DB_CACHE_SIZE_DEFAULT
argument_list|)
decl_stmt|;
name|Options
name|options
init|=
operator|new
name|Options
argument_list|()
decl_stmt|;
name|options
operator|.
name|cacheSize
argument_list|(
name|cacheSize
operator|*
name|OzoneConsts
operator|.
name|MB
argument_list|)
expr_stmt|;
name|File
name|ksmDBFile
init|=
operator|new
name|File
argument_list|(
name|metaDir
operator|.
name|getPath
argument_list|()
argument_list|,
name|KSM_DB_NAME
argument_list|)
decl_stmt|;
name|this
operator|.
name|ksm
operator|=
name|ksm
expr_stmt|;
name|this
operator|.
name|store
operator|=
operator|new
name|LevelDBStore
argument_list|(
name|ksmDBFile
argument_list|,
name|options
argument_list|)
expr_stmt|;
name|lock
operator|=
operator|new
name|ReentrantReadWriteLock
argument_list|()
expr_stmt|;
name|this
operator|.
name|maxUserVolumeCount
operator|=
name|conf
operator|.
name|getInt
argument_list|(
name|OZONE_KSM_USER_MAX_VOLUME
argument_list|,
name|OZONE_KSM_USER_MAX_VOLUME_DEFAULT
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|start ()
specifier|public
name|void
name|start
parameter_list|()
block|{   }
annotation|@
name|Override
DECL|method|stop ()
specifier|public
name|void
name|stop
parameter_list|()
throws|throws
name|IOException
block|{
name|store
operator|.
name|close
argument_list|()
expr_stmt|;
block|}
comment|/**    * Creates a volume.    * @param args - KsmVolumeArgs.    */
annotation|@
name|Override
DECL|method|createVolume (KsmVolumeArgs args)
specifier|public
name|void
name|createVolume
parameter_list|(
name|KsmVolumeArgs
name|args
parameter_list|)
throws|throws
name|IOException
block|{
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|args
argument_list|)
expr_stmt|;
name|lock
operator|.
name|writeLock
argument_list|()
operator|.
name|lock
argument_list|()
expr_stmt|;
name|WriteBatch
name|batch
init|=
name|store
operator|.
name|createWriteBatch
argument_list|()
decl_stmt|;
try|try
block|{
name|byte
index|[]
name|volumeName
init|=
name|store
operator|.
name|get
argument_list|(
name|DFSUtil
operator|.
name|string2Bytes
argument_list|(
name|args
operator|.
name|getVolume
argument_list|()
argument_list|)
argument_list|)
decl_stmt|;
comment|// Check of the volume already exists
if|if
condition|(
name|volumeName
operator|!=
literal|null
condition|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"volume:{} already exists"
argument_list|,
name|args
operator|.
name|getVolume
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|KSMException
argument_list|(
name|ResultCodes
operator|.
name|FAILED_VOLUME_ALREADY_EXISTS
argument_list|)
throw|;
block|}
comment|// Next count the number of volumes for the user
name|String
name|dbUserName
init|=
literal|"$"
operator|+
name|args
operator|.
name|getOwnerName
argument_list|()
decl_stmt|;
name|byte
index|[]
name|volumeList
init|=
name|store
operator|.
name|get
argument_list|(
name|DFSUtil
operator|.
name|string2Bytes
argument_list|(
name|dbUserName
argument_list|)
argument_list|)
decl_stmt|;
name|List
name|prevVolList
decl_stmt|;
if|if
condition|(
name|volumeList
operator|!=
literal|null
condition|)
block|{
name|VolumeList
name|vlist
init|=
name|VolumeList
operator|.
name|parseFrom
argument_list|(
name|volumeList
argument_list|)
decl_stmt|;
name|prevVolList
operator|=
name|vlist
operator|.
name|getVolumeNamesList
argument_list|()
expr_stmt|;
block|}
else|else
block|{
name|prevVolList
operator|=
operator|new
name|LinkedList
argument_list|()
expr_stmt|;
block|}
if|if
condition|(
name|prevVolList
operator|.
name|size
argument_list|()
operator|>=
name|maxUserVolumeCount
condition|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"Too many volumes for user:{}"
argument_list|,
name|args
operator|.
name|getOwnerName
argument_list|()
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|KSMException
argument_list|(
name|ResultCodes
operator|.
name|FAILED_TOO_MANY_USER_VOLUMES
argument_list|)
throw|;
block|}
comment|// Commit the volume information to leveldb
name|VolumeInfo
name|volumeInfo
init|=
name|args
operator|.
name|getProtobuf
argument_list|()
decl_stmt|;
name|batch
operator|.
name|put
argument_list|(
name|DFSUtil
operator|.
name|string2Bytes
argument_list|(
name|args
operator|.
name|getVolume
argument_list|()
argument_list|)
argument_list|,
name|volumeInfo
operator|.
name|toByteArray
argument_list|()
argument_list|)
expr_stmt|;
name|prevVolList
operator|.
name|add
argument_list|(
name|args
operator|.
name|getVolume
argument_list|()
argument_list|)
expr_stmt|;
name|VolumeList
name|newVolList
init|=
name|VolumeList
operator|.
name|newBuilder
argument_list|()
operator|.
name|addAllVolumeNames
argument_list|(
name|prevVolList
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|batch
operator|.
name|put
argument_list|(
name|DFSUtil
operator|.
name|string2Bytes
argument_list|(
name|dbUserName
argument_list|)
argument_list|,
name|newVolList
operator|.
name|toByteArray
argument_list|()
argument_list|)
expr_stmt|;
name|store
operator|.
name|commitWriteBatch
argument_list|(
name|batch
argument_list|)
expr_stmt|;
name|LOG
operator|.
name|info
argument_list|(
literal|"created volume:{} user:{}"
argument_list|,
name|args
operator|.
name|getVolume
argument_list|()
argument_list|,
name|args
operator|.
name|getOwnerName
argument_list|()
argument_list|)
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|IOException
decl||
name|DBException
name|ex
parameter_list|)
block|{
name|ksm
operator|.
name|getMetrics
argument_list|()
operator|.
name|incNumVolumeCreateFails
argument_list|()
expr_stmt|;
name|LOG
operator|.
name|error
argument_list|(
literal|"Volume creation failed for user:{} volname:{}"
argument_list|,
name|args
operator|.
name|getOwnerName
argument_list|()
argument_list|,
name|args
operator|.
name|getVolume
argument_list|()
argument_list|,
name|ex
argument_list|)
expr_stmt|;
throw|throw
name|ex
throw|;
block|}
finally|finally
block|{
name|store
operator|.
name|closeWriteBatch
argument_list|(
name|batch
argument_list|)
expr_stmt|;
name|lock
operator|.
name|writeLock
argument_list|()
operator|.
name|unlock
argument_list|()
expr_stmt|;
block|}
block|}
block|}
end_class

end_unit

