begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.protocolPB
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocolPB
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|ByteString
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|io
operator|.
name|Text
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneAcl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclType
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclRights
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|security
operator|.
name|OzoneTokenIdentifier
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|security
operator|.
name|proto
operator|.
name|SecurityProtos
operator|.
name|TokenProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|security
operator|.
name|token
operator|.
name|Token
import|;
end_import

begin_comment
comment|/**  * Utilities for converting protobuf classes.  */
end_comment

begin_class
DECL|class|OMPBHelper
specifier|public
specifier|final
class|class
name|OMPBHelper
block|{
DECL|method|OMPBHelper ()
specifier|private
name|OMPBHelper
parameter_list|()
block|{
comment|/** Hidden constructor */
block|}
comment|/**    * Converts OzoneAcl into protobuf's OzoneAclInfo.    * @return OzoneAclInfo    */
DECL|method|convertOzoneAcl (OzoneAcl acl)
specifier|public
specifier|static
name|OzoneAclInfo
name|convertOzoneAcl
parameter_list|(
name|OzoneAcl
name|acl
parameter_list|)
block|{
name|OzoneAclInfo
operator|.
name|OzoneAclType
name|aclType
decl_stmt|;
switch|switch
condition|(
name|acl
operator|.
name|getType
argument_list|()
condition|)
block|{
case|case
name|USER
case|:
name|aclType
operator|=
name|OzoneAclType
operator|.
name|USER
expr_stmt|;
break|break;
case|case
name|GROUP
case|:
name|aclType
operator|=
name|OzoneAclType
operator|.
name|GROUP
expr_stmt|;
break|break;
case|case
name|WORLD
case|:
name|aclType
operator|=
name|OzoneAclType
operator|.
name|WORLD
expr_stmt|;
break|break;
default|default:
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"ACL type is not recognized"
argument_list|)
throw|;
block|}
name|OzoneAclInfo
operator|.
name|OzoneAclRights
name|aclRights
decl_stmt|;
switch|switch
condition|(
name|acl
operator|.
name|getRights
argument_list|()
condition|)
block|{
case|case
name|READ
case|:
name|aclRights
operator|=
name|OzoneAclRights
operator|.
name|READ
expr_stmt|;
break|break;
case|case
name|WRITE
case|:
name|aclRights
operator|=
name|OzoneAclRights
operator|.
name|WRITE
expr_stmt|;
break|break;
case|case
name|READ_WRITE
case|:
name|aclRights
operator|=
name|OzoneAclRights
operator|.
name|READ_WRITE
expr_stmt|;
break|break;
default|default:
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"ACL right is not recognized"
argument_list|)
throw|;
block|}
return|return
name|OzoneAclInfo
operator|.
name|newBuilder
argument_list|()
operator|.
name|setType
argument_list|(
name|aclType
argument_list|)
operator|.
name|setName
argument_list|(
name|acl
operator|.
name|getName
argument_list|()
argument_list|)
operator|.
name|setRights
argument_list|(
name|aclRights
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
comment|/**    * Converts protobuf's OzoneAclInfo into OzoneAcl.    * @return OzoneAcl    */
DECL|method|convertOzoneAcl (OzoneAclInfo aclInfo)
specifier|public
specifier|static
name|OzoneAcl
name|convertOzoneAcl
parameter_list|(
name|OzoneAclInfo
name|aclInfo
parameter_list|)
block|{
name|OzoneAcl
operator|.
name|OzoneACLType
name|aclType
decl_stmt|;
switch|switch
condition|(
name|aclInfo
operator|.
name|getType
argument_list|()
condition|)
block|{
case|case
name|USER
case|:
name|aclType
operator|=
name|OzoneAcl
operator|.
name|OzoneACLType
operator|.
name|USER
expr_stmt|;
break|break;
case|case
name|GROUP
case|:
name|aclType
operator|=
name|OzoneAcl
operator|.
name|OzoneACLType
operator|.
name|GROUP
expr_stmt|;
break|break;
case|case
name|WORLD
case|:
name|aclType
operator|=
name|OzoneAcl
operator|.
name|OzoneACLType
operator|.
name|WORLD
expr_stmt|;
break|break;
default|default:
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"ACL type is not recognized"
argument_list|)
throw|;
block|}
name|OzoneAcl
operator|.
name|OzoneACLRights
name|aclRights
decl_stmt|;
switch|switch
condition|(
name|aclInfo
operator|.
name|getRights
argument_list|()
condition|)
block|{
case|case
name|READ
case|:
name|aclRights
operator|=
name|OzoneAcl
operator|.
name|OzoneACLRights
operator|.
name|READ
expr_stmt|;
break|break;
case|case
name|WRITE
case|:
name|aclRights
operator|=
name|OzoneAcl
operator|.
name|OzoneACLRights
operator|.
name|WRITE
expr_stmt|;
break|break;
case|case
name|READ_WRITE
case|:
name|aclRights
operator|=
name|OzoneAcl
operator|.
name|OzoneACLRights
operator|.
name|READ_WRITE
expr_stmt|;
break|break;
default|default:
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"ACL right is not recognized"
argument_list|)
throw|;
block|}
return|return
operator|new
name|OzoneAcl
argument_list|(
name|aclType
argument_list|,
name|aclInfo
operator|.
name|getName
argument_list|()
argument_list|,
name|aclRights
argument_list|)
return|;
block|}
comment|/**    * Converts Ozone delegation token to @{@link TokenProto}.    * @return tokenProto    */
DECL|method|convertToTokenProto (Token<?> tok)
specifier|public
specifier|static
name|TokenProto
name|convertToTokenProto
parameter_list|(
name|Token
argument_list|<
name|?
argument_list|>
name|tok
parameter_list|)
block|{
if|if
condition|(
name|tok
operator|==
literal|null
condition|)
block|{
throw|throw
operator|new
name|IllegalArgumentException
argument_list|(
literal|"Invalid argument: token is null"
argument_list|)
throw|;
block|}
return|return
name|TokenProto
operator|.
name|newBuilder
argument_list|()
operator|.
name|setIdentifier
argument_list|(
name|getByteString
argument_list|(
name|tok
operator|.
name|getIdentifier
argument_list|()
argument_list|)
argument_list|)
operator|.
name|setPassword
argument_list|(
name|getByteString
argument_list|(
name|tok
operator|.
name|getPassword
argument_list|()
argument_list|)
argument_list|)
operator|.
name|setKind
argument_list|(
name|tok
operator|.
name|getKind
argument_list|()
operator|.
name|toString
argument_list|()
argument_list|)
operator|.
name|setService
argument_list|(
name|tok
operator|.
name|getService
argument_list|()
operator|.
name|toString
argument_list|()
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
DECL|method|getByteString (byte[] bytes)
specifier|public
specifier|static
name|ByteString
name|getByteString
parameter_list|(
name|byte
index|[]
name|bytes
parameter_list|)
block|{
comment|// return singleton to reduce object allocation
return|return
operator|(
name|bytes
operator|.
name|length
operator|==
literal|0
operator|)
condition|?
name|ByteString
operator|.
name|EMPTY
else|:
name|ByteString
operator|.
name|copyFrom
argument_list|(
name|bytes
argument_list|)
return|;
block|}
comment|/**    * Converts @{@link TokenProto} to Ozone delegation token.    *    * @return Ozone    */
DECL|method|convertToDelegationToken ( TokenProto tokenProto)
specifier|public
specifier|static
name|Token
argument_list|<
name|OzoneTokenIdentifier
argument_list|>
name|convertToDelegationToken
parameter_list|(
name|TokenProto
name|tokenProto
parameter_list|)
block|{
return|return
operator|new
name|Token
argument_list|<>
argument_list|(
name|tokenProto
operator|.
name|getIdentifier
argument_list|()
operator|.
name|toByteArray
argument_list|()
argument_list|,
name|tokenProto
operator|.
name|getPassword
argument_list|()
operator|.
name|toByteArray
argument_list|()
argument_list|,
operator|new
name|Text
argument_list|(
name|tokenProto
operator|.
name|getKind
argument_list|()
argument_list|)
argument_list|,
operator|new
name|Text
argument_list|(
name|tokenProto
operator|.
name|getService
argument_list|()
argument_list|)
argument_list|)
return|;
block|}
block|}
end_class

end_unit

