begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.request.volume
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|volume
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Optional
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|base
operator|.
name|Preconditions
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|audit
operator|.
name|AuditLogger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|audit
operator|.
name|OMAction
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OMMetadataManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OzoneManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|exceptions
operator|.
name|OMException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmVolumeArgs
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|OMMetrics
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|volume
operator|.
name|OMVolumeCreateResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|security
operator|.
name|acl
operator|.
name|IAccessAuthorizer
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|security
operator|.
name|acl
operator|.
name|OzoneObj
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|OMClientRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|OMClientResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|volume
operator|.
name|OMVolumeDeleteResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|DeleteVolumeRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|DeleteVolumeResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|utils
operator|.
name|db
operator|.
name|cache
operator|.
name|CacheKey
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|utils
operator|.
name|db
operator|.
name|cache
operator|.
name|CacheValue
import|;
end_import

begin_comment
comment|/**  * Handles volume delete request.  */
end_comment

begin_class
DECL|class|OMVolumeDeleteRequest
specifier|public
class|class
name|OMVolumeDeleteRequest
extends|extends
name|OMClientRequest
implements|implements
name|OMVolumeRequest
block|{
DECL|field|LOG
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|OMVolumeDeleteRequest
operator|.
name|class
argument_list|)
decl_stmt|;
DECL|method|OMVolumeDeleteRequest (OMRequest omRequest)
specifier|public
name|OMVolumeDeleteRequest
parameter_list|(
name|OMRequest
name|omRequest
parameter_list|)
block|{
name|super
argument_list|(
name|omRequest
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|validateAndUpdateCache (OzoneManager ozoneManager, long transactionLogIndex)
specifier|public
name|OMClientResponse
name|validateAndUpdateCache
parameter_list|(
name|OzoneManager
name|ozoneManager
parameter_list|,
name|long
name|transactionLogIndex
parameter_list|)
block|{
name|DeleteVolumeRequest
name|deleteVolumeRequest
init|=
name|getOmRequest
argument_list|()
operator|.
name|getDeleteVolumeRequest
argument_list|()
decl_stmt|;
name|Preconditions
operator|.
name|checkNotNull
argument_list|(
name|deleteVolumeRequest
argument_list|)
expr_stmt|;
name|String
name|volume
init|=
name|deleteVolumeRequest
operator|.
name|getVolumeName
argument_list|()
decl_stmt|;
name|OMMetrics
name|omMetrics
init|=
name|ozoneManager
operator|.
name|getMetrics
argument_list|()
decl_stmt|;
name|omMetrics
operator|.
name|incNumVolumeDeletes
argument_list|()
expr_stmt|;
name|OMResponse
operator|.
name|Builder
name|omResponse
init|=
name|OMResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|setCmdType
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Type
operator|.
name|DeleteVolume
argument_list|)
operator|.
name|setStatus
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|OK
argument_list|)
operator|.
name|setSuccess
argument_list|(
literal|true
argument_list|)
decl_stmt|;
name|AuditLogger
name|auditLogger
init|=
name|ozoneManager
operator|.
name|getAuditLogger
argument_list|()
decl_stmt|;
name|OzoneManagerProtocolProtos
operator|.
name|UserInfo
name|userInfo
init|=
name|getOmRequest
argument_list|()
operator|.
name|getUserInfo
argument_list|()
decl_stmt|;
try|try
block|{
comment|// check Acl
if|if
condition|(
name|ozoneManager
operator|.
name|getAclsEnabled
argument_list|()
condition|)
block|{
name|checkAcls
argument_list|(
name|ozoneManager
argument_list|,
name|OzoneObj
operator|.
name|ResourceType
operator|.
name|VOLUME
argument_list|,
name|OzoneObj
operator|.
name|StoreType
operator|.
name|OZONE
argument_list|,
name|IAccessAuthorizer
operator|.
name|ACLType
operator|.
name|DELETE
argument_list|,
name|volume
argument_list|,
literal|null
argument_list|,
literal|null
argument_list|)
expr_stmt|;
block|}
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"Volume deletion failed for volume:{}"
argument_list|,
name|volume
argument_list|,
name|ex
argument_list|)
expr_stmt|;
name|omMetrics
operator|.
name|incNumVolumeDeleteFails
argument_list|()
expr_stmt|;
name|auditLog
argument_list|(
name|auditLogger
argument_list|,
name|buildAuditMessage
argument_list|(
name|OMAction
operator|.
name|DELETE_VOLUME
argument_list|,
name|buildVolumeAuditMap
argument_list|(
name|volume
argument_list|)
argument_list|,
name|ex
argument_list|,
name|userInfo
argument_list|)
argument_list|)
expr_stmt|;
return|return
operator|new
name|OMVolumeCreateResponse
argument_list|(
literal|null
argument_list|,
literal|null
argument_list|,
name|createErrorOMResponse
argument_list|(
name|omResponse
argument_list|,
name|ex
argument_list|)
argument_list|)
return|;
block|}
name|OMMetadataManager
name|omMetadataManager
init|=
name|ozoneManager
operator|.
name|getMetadataManager
argument_list|()
decl_stmt|;
name|OmVolumeArgs
name|omVolumeArgs
init|=
literal|null
decl_stmt|;
name|String
name|owner
init|=
literal|null
decl_stmt|;
name|omMetadataManager
operator|.
name|getLock
argument_list|()
operator|.
name|acquireVolumeLock
argument_list|(
name|volume
argument_list|)
expr_stmt|;
try|try
block|{
name|owner
operator|=
name|getVolumeInfo
argument_list|(
name|omMetadataManager
argument_list|,
name|volume
argument_list|)
operator|.
name|getOwnerName
argument_list|()
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"Volume deletion failed for volume:{}"
argument_list|,
name|volume
argument_list|,
name|ex
argument_list|)
expr_stmt|;
name|omMetrics
operator|.
name|incNumVolumeDeleteFails
argument_list|()
expr_stmt|;
name|auditLog
argument_list|(
name|auditLogger
argument_list|,
name|buildAuditMessage
argument_list|(
name|OMAction
operator|.
name|DELETE_VOLUME
argument_list|,
name|buildVolumeAuditMap
argument_list|(
name|volume
argument_list|)
argument_list|,
name|ex
argument_list|,
name|userInfo
argument_list|)
argument_list|)
expr_stmt|;
return|return
operator|new
name|OMVolumeDeleteResponse
argument_list|(
literal|null
argument_list|,
literal|null
argument_list|,
literal|null
argument_list|,
name|createErrorOMResponse
argument_list|(
name|omResponse
argument_list|,
name|ex
argument_list|)
argument_list|)
return|;
block|}
finally|finally
block|{
name|omMetadataManager
operator|.
name|getLock
argument_list|()
operator|.
name|releaseVolumeLock
argument_list|(
name|volume
argument_list|)
expr_stmt|;
block|}
comment|// Release and reacquire lock for now it will not be a problem for now, as
comment|// applyTransaction serializes the operation's.
comment|// TODO: Revisit this logic once HDDS-1672 checks in.
comment|// We cannot acquire user lock holding volume lock, so released volume
comment|// lock, and acquiring user and volume lock.
name|omMetadataManager
operator|.
name|getLock
argument_list|()
operator|.
name|acquireUserLock
argument_list|(
name|owner
argument_list|)
expr_stmt|;
name|omMetadataManager
operator|.
name|getLock
argument_list|()
operator|.
name|acquireVolumeLock
argument_list|(
name|volume
argument_list|)
expr_stmt|;
name|String
name|dbUserKey
init|=
name|omMetadataManager
operator|.
name|getUserKey
argument_list|(
name|owner
argument_list|)
decl_stmt|;
name|String
name|dbVolumeKey
init|=
name|omMetadataManager
operator|.
name|getVolumeKey
argument_list|(
name|volume
argument_list|)
decl_stmt|;
name|IOException
name|exception
init|=
literal|null
decl_stmt|;
name|OzoneManagerProtocolProtos
operator|.
name|VolumeList
name|newVolumeList
init|=
literal|null
decl_stmt|;
try|try
block|{
if|if
condition|(
operator|!
name|omMetadataManager
operator|.
name|isVolumeEmpty
argument_list|(
name|volume
argument_list|)
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"volume:{} is not empty"
argument_list|,
name|volume
argument_list|)
expr_stmt|;
throw|throw
operator|new
name|OMException
argument_list|(
name|OMException
operator|.
name|ResultCodes
operator|.
name|VOLUME_NOT_EMPTY
argument_list|)
throw|;
block|}
name|newVolumeList
operator|=
name|omMetadataManager
operator|.
name|getUserTable
argument_list|()
operator|.
name|get
argument_list|(
name|owner
argument_list|)
expr_stmt|;
comment|// delete the volume from the owner list
comment|// as well as delete the volume entry
name|newVolumeList
operator|=
name|delVolumeFromOwnerList
argument_list|(
name|newVolumeList
argument_list|,
name|volume
argument_list|,
name|owner
argument_list|)
expr_stmt|;
name|omMetadataManager
operator|.
name|getUserTable
argument_list|()
operator|.
name|addCacheEntry
argument_list|(
operator|new
name|CacheKey
argument_list|<>
argument_list|(
name|dbUserKey
argument_list|)
argument_list|,
operator|new
name|CacheValue
argument_list|<>
argument_list|(
name|Optional
operator|.
name|of
argument_list|(
name|newVolumeList
argument_list|)
argument_list|,
name|transactionLogIndex
argument_list|)
argument_list|)
expr_stmt|;
name|omMetadataManager
operator|.
name|getVolumeTable
argument_list|()
operator|.
name|addCacheEntry
argument_list|(
operator|new
name|CacheKey
argument_list|<>
argument_list|(
name|dbVolumeKey
argument_list|)
argument_list|,
operator|new
name|CacheValue
argument_list|<>
argument_list|(
name|Optional
operator|.
name|absent
argument_list|()
argument_list|,
name|transactionLogIndex
argument_list|)
argument_list|)
expr_stmt|;
block|}
catch|catch
parameter_list|(
name|IOException
name|ex
parameter_list|)
block|{
name|exception
operator|=
name|ex
expr_stmt|;
block|}
finally|finally
block|{
name|omMetadataManager
operator|.
name|getLock
argument_list|()
operator|.
name|releaseVolumeLock
argument_list|(
name|volume
argument_list|)
expr_stmt|;
name|omMetadataManager
operator|.
name|getLock
argument_list|()
operator|.
name|releaseUserLock
argument_list|(
name|owner
argument_list|)
expr_stmt|;
block|}
comment|// Performing audit logging outside of the lock.
name|auditLog
argument_list|(
name|auditLogger
argument_list|,
name|buildAuditMessage
argument_list|(
name|OMAction
operator|.
name|DELETE_VOLUME
argument_list|,
name|buildVolumeAuditMap
argument_list|(
name|volume
argument_list|)
argument_list|,
name|exception
argument_list|,
name|userInfo
argument_list|)
argument_list|)
expr_stmt|;
comment|// return response after releasing lock.
if|if
condition|(
name|exception
operator|==
literal|null
condition|)
block|{
name|LOG
operator|.
name|debug
argument_list|(
literal|"Volume deleted for user:{} volume:{}"
argument_list|,
name|owner
argument_list|,
name|volume
argument_list|)
expr_stmt|;
name|omMetrics
operator|.
name|decNumVolumes
argument_list|()
expr_stmt|;
name|omResponse
operator|.
name|setDeleteVolumeResponse
argument_list|(
name|DeleteVolumeResponse
operator|.
name|newBuilder
argument_list|()
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
return|return
operator|new
name|OMVolumeDeleteResponse
argument_list|(
name|volume
argument_list|,
name|owner
argument_list|,
name|newVolumeList
argument_list|,
name|omResponse
operator|.
name|build
argument_list|()
argument_list|)
return|;
block|}
else|else
block|{
name|LOG
operator|.
name|error
argument_list|(
literal|"Volume deletion failed for user:{} volume:{}"
argument_list|,
name|owner
argument_list|,
name|volume
argument_list|,
name|exception
argument_list|)
expr_stmt|;
name|omMetrics
operator|.
name|incNumVolumeDeleteFails
argument_list|()
expr_stmt|;
return|return
operator|new
name|OMVolumeDeleteResponse
argument_list|(
literal|null
argument_list|,
literal|null
argument_list|,
literal|null
argument_list|,
name|createErrorOMResponse
argument_list|(
name|omResponse
argument_list|,
name|exception
argument_list|)
argument_list|)
return|;
block|}
block|}
comment|/**    * Return volume info for the specified volume. This method should be    * called after acquiring volume lock.    * @param omMetadataManager    * @param volume    * @return OmVolumeArgs    * @throws IOException    */
DECL|method|getVolumeInfo (OMMetadataManager omMetadataManager, String volume)
specifier|private
name|OmVolumeArgs
name|getVolumeInfo
parameter_list|(
name|OMMetadataManager
name|omMetadataManager
parameter_list|,
name|String
name|volume
parameter_list|)
throws|throws
name|IOException
block|{
name|String
name|dbVolumeKey
init|=
name|omMetadataManager
operator|.
name|getVolumeKey
argument_list|(
name|volume
argument_list|)
decl_stmt|;
name|OmVolumeArgs
name|volumeArgs
init|=
name|omMetadataManager
operator|.
name|getVolumeTable
argument_list|()
operator|.
name|get
argument_list|(
name|dbVolumeKey
argument_list|)
decl_stmt|;
if|if
condition|(
name|volumeArgs
operator|==
literal|null
condition|)
block|{
throw|throw
operator|new
name|OMException
argument_list|(
literal|"Volume "
operator|+
name|volume
operator|+
literal|" is not found"
argument_list|,
name|OMException
operator|.
name|ResultCodes
operator|.
name|VOLUME_NOT_FOUND
argument_list|)
throw|;
block|}
return|return
name|volumeArgs
return|;
block|}
block|}
end_class

end_unit

