begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.request.volume.acl
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|volume
operator|.
name|acl
package|;
end_package

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|common
operator|.
name|collect
operator|.
name|Lists
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneAcl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmOzoneAclMap
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmVolumeArgs
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|TestOMRequestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|volume
operator|.
name|TestOMVolumeRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|OMClientResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|UUID
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclScope
operator|.
name|ACCESS
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OzoneAclInfo
operator|.
name|OzoneAclScope
operator|.
name|DEFAULT
import|;
end_import

begin_comment
comment|/**  * Tests volume setAcl request.  */
end_comment

begin_class
DECL|class|TestOMVolumeSetAclRequest
specifier|public
class|class
name|TestOMVolumeSetAclRequest
extends|extends
name|TestOMVolumeRequest
block|{
annotation|@
name|Test
DECL|method|testPreExecute ()
specifier|public
name|void
name|testPreExecute
parameter_list|()
throws|throws
name|Exception
block|{
name|String
name|volumeName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|OzoneAcl
name|acl
init|=
name|OzoneAcl
operator|.
name|parseAcl
argument_list|(
literal|"user:bilbo:rw"
argument_list|)
decl_stmt|;
name|OMRequest
name|originalRequest
init|=
name|TestOMRequestUtils
operator|.
name|createVolumeSetAclRequest
argument_list|(
name|volumeName
argument_list|,
name|Lists
operator|.
name|newArrayList
argument_list|(
name|acl
argument_list|)
argument_list|)
decl_stmt|;
name|OMVolumeSetAclRequest
name|omVolumeSetAclRequest
init|=
operator|new
name|OMVolumeSetAclRequest
argument_list|(
name|originalRequest
argument_list|)
decl_stmt|;
name|OMRequest
name|modifiedRequest
init|=
name|omVolumeSetAclRequest
operator|.
name|preExecute
argument_list|(
name|ozoneManager
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertNotEquals
argument_list|(
name|modifiedRequest
argument_list|,
name|originalRequest
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testValidateAndUpdateCacheSuccess ()
specifier|public
name|void
name|testValidateAndUpdateCacheSuccess
parameter_list|()
throws|throws
name|Exception
block|{
name|String
name|volumeName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|String
name|ownerName
init|=
literal|"user1"
decl_stmt|;
name|TestOMRequestUtils
operator|.
name|addUserToDB
argument_list|(
name|volumeName
argument_list|,
name|ownerName
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|TestOMRequestUtils
operator|.
name|addVolumeToDB
argument_list|(
name|volumeName
argument_list|,
name|ownerName
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|OzoneAcl
name|userAccessAcl
init|=
name|OzoneAcl
operator|.
name|parseAcl
argument_list|(
literal|"user:bilbo:rw[ACCESS]"
argument_list|)
decl_stmt|;
name|OzoneAcl
name|groupDefaultAcl
init|=
name|OzoneAcl
operator|.
name|parseAcl
argument_list|(
literal|"group:admin:rwdlncxy[DEFAULT]"
argument_list|)
decl_stmt|;
name|List
argument_list|<
name|OzoneAcl
argument_list|>
name|acls
init|=
name|Lists
operator|.
name|newArrayList
argument_list|(
name|userAccessAcl
argument_list|,
name|groupDefaultAcl
argument_list|)
decl_stmt|;
name|OMRequest
name|originalRequest
init|=
name|TestOMRequestUtils
operator|.
name|createVolumeSetAclRequest
argument_list|(
name|volumeName
argument_list|,
name|acls
argument_list|)
decl_stmt|;
name|OMVolumeSetAclRequest
name|omVolumeSetAclRequest
init|=
operator|new
name|OMVolumeSetAclRequest
argument_list|(
name|originalRequest
argument_list|)
decl_stmt|;
name|omVolumeSetAclRequest
operator|.
name|preExecute
argument_list|(
name|ozoneManager
argument_list|)
expr_stmt|;
name|String
name|volumeKey
init|=
name|omMetadataManager
operator|.
name|getVolumeKey
argument_list|(
name|volumeName
argument_list|)
decl_stmt|;
comment|// Get Acl before validateAndUpdateCache.
name|OmVolumeArgs
name|omVolumeArgs
init|=
name|omMetadataManager
operator|.
name|getVolumeTable
argument_list|()
operator|.
name|get
argument_list|(
name|volumeKey
argument_list|)
decl_stmt|;
comment|// As request is valid volume table should have entry.
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|omVolumeArgs
argument_list|)
expr_stmt|;
name|OmOzoneAclMap
name|aclMapBeforeSet
init|=
name|omVolumeArgs
operator|.
name|getAclMap
argument_list|()
decl_stmt|;
name|OMClientResponse
name|omClientResponse
init|=
name|omVolumeSetAclRequest
operator|.
name|validateAndUpdateCache
argument_list|(
name|ozoneManager
argument_list|,
literal|1
argument_list|,
name|ozoneManagerDoubleBufferHelper
argument_list|)
decl_stmt|;
name|OMResponse
name|omResponse
init|=
name|omClientResponse
operator|.
name|getOMResponse
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|omResponse
operator|.
name|getSetAclResponse
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|OK
argument_list|,
name|omResponse
operator|.
name|getStatus
argument_list|()
argument_list|)
expr_stmt|;
name|OmOzoneAclMap
name|aclMapAfterSet
init|=
name|omMetadataManager
operator|.
name|getVolumeTable
argument_list|()
operator|.
name|get
argument_list|(
name|volumeKey
argument_list|)
operator|.
name|getAclMap
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertNotEquals
argument_list|(
name|aclMapBeforeSet
argument_list|,
name|aclMapAfterSet
argument_list|)
expr_stmt|;
comment|// Acl is added to aclMapAfterSet
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|2
argument_list|,
name|aclMapAfterSet
operator|.
name|getAcl
argument_list|()
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
literal|"Default Acl should be set."
argument_list|,
name|aclMapAfterSet
operator|.
name|getAclsByScope
argument_list|(
name|ACCESS
argument_list|)
operator|.
name|contains
argument_list|(
name|userAccessAcl
argument_list|)
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
literal|"Default Acl should be set."
argument_list|,
name|aclMapAfterSet
operator|.
name|getAclsByScope
argument_list|(
name|DEFAULT
argument_list|)
operator|.
name|contains
argument_list|(
name|groupDefaultAcl
argument_list|)
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testValidateAndUpdateCacheWithVolumeNotFound ()
specifier|public
name|void
name|testValidateAndUpdateCacheWithVolumeNotFound
parameter_list|()
throws|throws
name|Exception
block|{
name|String
name|volumeName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|OzoneAcl
name|acl
init|=
name|OzoneAcl
operator|.
name|parseAcl
argument_list|(
literal|"user:bilbo:rw"
argument_list|)
decl_stmt|;
name|OMRequest
name|originalRequest
init|=
name|TestOMRequestUtils
operator|.
name|createVolumeSetAclRequest
argument_list|(
name|volumeName
argument_list|,
name|Lists
operator|.
name|newArrayList
argument_list|(
name|acl
argument_list|)
argument_list|)
decl_stmt|;
name|OMVolumeSetAclRequest
name|omVolumeSetAclRequest
init|=
operator|new
name|OMVolumeSetAclRequest
argument_list|(
name|originalRequest
argument_list|)
decl_stmt|;
name|omVolumeSetAclRequest
operator|.
name|preExecute
argument_list|(
name|ozoneManager
argument_list|)
expr_stmt|;
name|OMClientResponse
name|omClientResponse
init|=
name|omVolumeSetAclRequest
operator|.
name|validateAndUpdateCache
argument_list|(
name|ozoneManager
argument_list|,
literal|1
argument_list|,
name|ozoneManagerDoubleBufferHelper
argument_list|)
decl_stmt|;
name|OMResponse
name|omResponse
init|=
name|omClientResponse
operator|.
name|getOMResponse
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|omResponse
operator|.
name|getSetAclResponse
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|VOLUME_NOT_FOUND
argument_list|,
name|omResponse
operator|.
name|getStatus
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

